[gd_scene load_steps=6 format=3 uid="uid://da03iuvf7b43e"]

[ext_resource type="Texture2D" uid="uid://bad8ehh7psuyl" path="res://Assets/Actions/ATK_BOOK.png" id="1_hxi3i"]
[ext_resource type="Script" uid="uid://bv4nmrm6p6unj" path="res://Scripts/attack.gd" id="2_hxi3i"]
[ext_resource type="AudioStream" uid="uid://8dluew2npsl6" path="res://Assets/Sounds/Button_hover.wav" id="3_vaqij"]
[ext_resource type="AudioStream" uid="uid://dkjbhchudktmy" path="res://Assets/Sounds/Pick_Up.mp3" id="4_wi2lp"]
[ext_resource type="AudioStream" uid="uid://d0akqxdwc0eff" path="res://Assets/Sounds/Drop.mp3" id="5_1e0xd"]

[node name="Attack" type="Sprite2D"]
scale = Vector2(3, 3)
texture = ExtResource("1_hxi3i")
script = ExtResource("2_hxi3i")
rapetit = 1.15

[node name="atk_area" type="Area2D" parent="."]

[node name="AttackBox" type="CollisionPolygon2D" parent="atk_area"]
position = Vector2(0.0388775, 4.76837e-07)
scale = Vector2(0.0159008, 0.015751)
polygon = PackedVector2Array(992, -992, -686, -992, -686, -934, -744.8, -934, -748, -930.8, -748, -872, -806.8, -872, -810, -868.8, -810, -810, -868.8, -810, -872, -806.8, -872, -748, -934, -745.9, -934, 992, 810, 992, 810, 872, 868.8, 872, 872, 868.8, 872, 809.9, 931.1, 808, 934, 808, 934, 748, 992, 748)

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vaqij")

[node name="PickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wi2lp")

[node name="Drop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1e0xd")

[connection signal="input_event" from="atk_area" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="atk_area" to="." method="_on_atk_area_mouse_entered"]
[connection signal="mouse_exited" from="atk_area" to="." method="_on_atk_area_mouse_exited"]
